re-styled landing page with new gradient and also fixed navbar spacing

--- a/scoresheet-app/styles/home.scss
+++ b/scoresheet-app/styles/home.scss
@@ -1,6 +1,6 @@
 $primary-color: #2c7452;
 $font-stack: Arial, Helvetica, sans-serif;
-$logo-height: 20px;
+$logo-height: 35px;
 @media (max-width: 768px) {
   body {
     padding-top: $logo-height*5;
@@ -9,6 +9,7 @@ $logo-height: 20px;
 
 body {
   font-family: $font-stack;
+  background-color: transparent;
 }
 
 #create-template h3 {
@@ -28,6 +29,12 @@ a:hover {
 
 .navbar-default .navbar-nav > li > a {
   color: white;
+  font-size: $logo-height / 2;
+}
+
+.nav-link {
+  padding-top: 7px;
+  padding-bottom: none;
 }
 
 .navbar {
@@ -40,6 +47,10 @@ a:hover {
   width: auto;
 }
 
+.navbar-default .navbar-nav > li > a:hover {
+  color: darken(white, 25%);
+}
+
 #template-list-container,
 #game {
   background-color: white;
@@ -48,7 +59,7 @@ a:hover {
 #template-list,
 #game,
 #create-template {
-  margin-top: $logo-height*3;
+  margin-top: $logo-height*4;
 }
 
 ul.special-list {
@@ -69,32 +80,24 @@ ul.special-list {
   background-color: $primary-color;
 }
 
-body {
-  background-color: transparent;
-}
-
 #landing-page {
   background: linear-gradient(160deg, $primary-color 17%, #5bff8c 85%);
-  height: 1000px;
+  height: 1050px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .landing-page-logo {
   height: auto;
   width: 70%;
-  // margin-bottom: 5em;
-  margin-left: 20%;
-  // margin-right: 50%;
   margin-top: 20%;
-  align-self: center;
+  margin-left: 15%;
 }
 
 .landing-page-btn {
   margin-top: 10%;
-  align-self: center;
-  margin-left: 50%;
+  margin-left: 45%;
+  width: 10%;
 }
 
 .white-text,
@@ -111,28 +114,6 @@ body {
 
 .white-text:hover {
   background-color: lighten($primary-color, 5%);
-}
-
-.nav > li > a > img {
-  height: 35px;
-}
-
-.navbar-default .navbar-nav > li > a {
-  font-size: 18px;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color: darken(white, 25%);
-}
-
-.landing-page-notepad {
-  height: 150px;
-  align-self: flex-end;
-}
-
-.landing-page-btn-notepad {
-  display: flex;
-  flex-direction: row;
 }
 
 .enter-name {
